tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_trait_alias_polymorphic_where_clause/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: No method named 'baz' found for type 'U'
   ┌─ src/main.nr:17:13
   │
17 │             x.foo().bar().baz()
   │             -------------------
   │

error: No matching impl found for `T: Baz`
   ┌─ src/main.nr:39:43
   │
39 │             assert(0.foo().bar().baz() == qux(0));
   │                                           --- No impl for `T: Baz`
   │
   = Required by `Field: Qux<_>`

Aborting due to 2 previous errors
